unpackaged/main/default/objects/RoleContact__c/RoleContact__c.object-meta.xml
<CustomObject>
    <label>Rôle de contact</label>
    <nameField>
        <displayFormat>GF-RCN-{0000000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rôles de contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>