unpackaged/main/default/objects/RoleContact__c/fields/CompteOpportunite__c.field-meta.xml
<CustomField>
    <fullName>CompteOpportunite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte de l&#39;opportunité</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rôles des contacts</relationshipLabel>
    <relationshipName>ContactsOpportunites</relationshipName>
    <type>Lookup</type>
</CustomField>