unpackaged/main/default/objects/RoleContact__c/fields/Fonction_Contact__c.field-meta.xml
<CustomField>
    <fullName>Fonction_Contact__c</fullName>
    <formula>text( Contact__r.Fonction__c )</formula>
    <label>Fonction</label>
    <type>Text</type>
</CustomField>