unpackaged/main/default/objects/RoleContact__c/fields/Influence__c.field-meta.xml
<CustomField>
    <fullName>Influence__c</fullName>
    <label>Influence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Indifférent</fullName>
            </value>
            <value>
                <fullName>Détracteur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>