unpackaged/main/default/objects/RoleContact__c/fields/InfluenceAchat__c.field-meta.xml
<CustomField>
    <fullName>InfluenceAchat__c</fullName>
    <label>Influence d&#39;achat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Décideur économique</fullName>
            </value>
            <value>
                <fullName>Décideur technique</fullName>
            </value>
            <value>
                <fullName>Sans influence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>