unpackaged/main/default/objects/RoleContact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Rôle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avis de paiement</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Comptabilité</fullName>
            </value>
            <value>
                <fullName>Donneur d&#39;ordre</fullName>
            </value>
            <value>
                <fullName>Exploitant</fullName>
            </value>
            <value>
                <fullName>Facturation</fullName>
            </value>
            <value>
                <fullName>Facture dématerialisée</fullName>
            </value>
            <value>
                <fullName>Livré</fullName>
            </value>
            <value>
                <fullName>Payeur</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>Relance KM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>