unpackaged/main/default/objects/RoleContact__c/fields/Role_Containers__c.field-meta.xml
<CustomField>
    <fullName>Role_Containers__c</fullName>
    <label>Rôle (Containers)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payeur</fullName>
            </value>
            <value>
                <fullName>Exploitant</fullName>
            </value>
            <value>
                <fullName>Facturation</fullName>
            </value>
            <value>
                <fullName>Comptabilité</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Avis de paiement</fullName>
            </value>
            <value>
                <fullName>Facture dématérialisée</fullName>
            </value>
            <value>
                <fullName>Livré</fullName>
            </value>
            <value>
                <fullName>Donneur d&#39;ordre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>