unpackaged/main/default/objects/RoleContact__c/fields/SAP_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_Id__c</fullName>
    <formula>Contact__r.SAP_ID__c</formula>
    <label>SAP Id</label>
    <type>Text</type>
</CustomField>