unpackaged/main/default/objects/RoleContact__c/fields/ServiceDepartement__c.field-meta.xml
<CustomField>
    <fullName>ServiceDepartement__c</fullName>
    <label>Service/département</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Achat</fullName>
            </value>
            <value>
                <fullName>Administratif</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Comptabilité</fullName>
            </value>
            <value>
                <fullName>Cuisine</fullName>
            </value>
            <value>
                <fullName>Direction générale</fullName>
            </value>
            <value>
                <fullName>Exploitation</fullName>
            </value>
            <value>
                <fullName>Financier</fullName>
            </value>
            <value>
                <fullName>Logistique</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Technique</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>