unpackaged/main/default/objects/RoleContact__c/fields/StatutContact__c.field-meta.xml
<CustomField>
    <fullName>StatutContact__c</fullName>
    <formula>TEXT( Contact__r.Statut__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut du contact</label>
    <type>Text</type>
</CustomField>