unpackaged/main/default/objects/RoleContact__c/fields/Tel__c.field-meta.xml
<CustomField>
    <fullName>Tel__c</fullName>
    <formula>Contact__r.Phone</formula>
    <label>Tél</label>
    <type>Text</type>
</CustomField>