unpackaged/main/default/objects/RoleContact__c/validationRules/RDC_RV01_RequiredImport.validationRule-meta.xml
<ValidationRule>
    <fullName>RDC_RV01_RequiredImport</fullName>
    <active>false</active>
    <description>Required Fields Import</description>
    <errorConditionFormula>AND( OR( ISBLANK(Opportunite__c) , ISBLANK(Contact__c)), $Setup.Bypass__c.BypassValidationRules__c = false)</errorConditionFormula>
    <errorMessage>Les champs obligatoires doivent être remplis.</errorMessage>
</ValidationRule>