unpackaged/main/default/objects/RoleContact__c/validationRules/RDC_RV03_CompteDeLopportunite.validationRule-meta.xml
<ValidationRule>
    <fullName>RDC_RV03_CompteDeLopportunite</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  CompteOpportunite__c &lt;&gt;  Opportunite__r.AccountId , $Setup.Bypass__c.BypassValidationRules__c = false)</errorConditionFormula>
    <errorDisplayField>CompteOpportunite__c</errorDisplayField>
    <errorMessage>Le compte doit être le même que celui de l&#39;opportunité.</errorMessage>
</ValidationRule>