unpackaged/main/default/objects/RoleContact__c/validationRules/RDC_VR02_CompteInactif.validationRule-meta.xml
<ValidationRule>
    <fullName>RDC_VR02_CompteInactif</fullName>
    <active>true</active>
    <description>OPP-RG-017</description>
    <errorConditionFormula>AND(OR(ISNEW(),ISCHANGED( Contact__c )),TEXT( Contact__r.Statut__c ) = $Label.CON_Statut_Inactif,$Setup.Bypass__c.BypassValidationRules__c = false)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Un contact « Inactif » ne peut pas être choisi pour un rôle de contact sur une opportunité.</errorMessage>
</ValidationRule>