unpackaged/main/default/objects/RoleContact__c/validationRules/VR_restrictions_containers.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_restrictions_containers</fullName>
    <active>true</active>
    <errorConditionFormula>if( 
AND(TEXT(Opportunite__r.TypeProduits__c) =&#39;Containers&#39;
,
OR (  text(Role__c) = &#39;PV&#39; , text(Role__c) = &#39;Relance KM&#39;)
)
,
TRUE
, 
FALSE)</errorConditionFormula>
    <errorDisplayField>Role__c</errorDisplayField>
    <errorMessage>Vous ne pouvez pas créer une fonction &quot;PV&quot; ou &quot;Relance KM&quot; pour containers</errorMessage>
</ValidationRule>